# kaze

./: .gdb_history  .gitignore  .gitmodules  README.md  basic.vert.spv  error_handling.cpp  error_handling.hpp  logging.cpp  logging.hpp  logz.txt  main.cpp  makefile  meson.build  shaders.cpp  shaders.hpp  vulkan_init.cpp  vulkan_init.hpp  vulkan_memory.cpp  vulkan_memory.hpp  vulkan_validation_layers.cpp  vulkan_validation_layers.hpp
.cache/clangd/index/: error_handling.cpp.B8EBF5551C884039.idx  error_handling.hpp.88F17EC167E25909.idx  main.cpp.AE3F4BE2A5CDA809.idx  shaders.cpp.89E4BB4E373E29CE.idx  shaders.hpp.22EFA307E6B228F6.idx  vulkan_init.cpp.364C33698F7EAB68.idx  vulkan_init.hpp.17EBD3DBB0B816A1.idx  vulkan_validation_layers.cpp.872155F4E5E26442.idx  vulkan_validation_layers.hpp.2370179B90210C85.idx
docs.d/: init.md
errlogs.d/: errlog.txt
shaders.d/: basic.frag  basic.vert  basic_input.vert
subprojects/: spirv-cross.wrap
